# uk-retirement-planner

./: .gitignore  Dockerfile  README.md  deploy_cf.sh  deploy_prep.sh  firebase.json  firestore.rules  migrate_kv_to_firestore.py  requirements.txt  test_sim.py
.agents/rules/: workspace.md
.antigravity/: rules.md
.github/workflows/: deploy.yml
assets/: .env.example  package-lock.json  package.json
assets/src/: App.tsx  config.ts
backend/: engine.py  main.py  models.py  pyproject.toml  requirements.txt  test_engine.py  test_tax_features.py  wrangler.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
src/: app_init.py  auth.py  engine.py  main.py  models.py  pyproject.toml  requirements.txt  test_engine.py  wrangler.toml
